panko-compiletest/src/snapshots/panko_compiletest__scope-panko__tests__cases__execute__arithmetic__test_arithmetic_between_const_and_nonconst.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/arithmetic/test_arithmetic_between_const_and_nonconst.c
snapshot_kind: text
---
success: true
exit_code: 0
----- stdout -----
(translation-unit
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (definition x~1 `int const` 42)
         (definition y~2 `int` 27)
         (return (add (name x~1 `int const`) (name y~2 `int`))))))

----- stderr -----
