panko-compiletest/src/snapshots/panko_compiletest__scope-panko__tests__cases__execute__arithmetic__test_unary_compl.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/arithmetic/test_unary_compl.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit
   (declaration printf~0 `fn(∅: ptr<char const>, ...) -> int` ∅)
   (function-definition
      main~1 `fn(∅: int, argv: ptr<ptr<char>>) -> int`
      (params
         main.unnamed_parameter.0~2 `int`
         argv~3 `ptr<ptr<char>>`)
      (compound-statement
         (definition i~4 `int` 0)
         (definition compl_0~5 `int` (compl (name i~4 `int`)))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (deref (add (name argv~3 `ptr<ptr<char>>`) 1))
               (name compl_0~5 `int`)))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (deref (add (name argv~3 `ptr<ptr<char>>`) 2))
               (compl 0u)))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (deref (add (name argv~3 `ptr<ptr<char>>`) 3))
               (compl 42l)))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (deref (add (name argv~3 `ptr<ptr<char>>`) 4))
               (compl 42lu)))
         (definition l~6 `long` (compl 42u))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (deref (add (name argv~3 `ptr<ptr<char>>`) 3))
               (name l~6 `long`))))))

----- stderr -----
